<resources>
    <string name="app_name">Store Locator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="title_activity_user_detail">Shopkeeper Detail</string>
    <string name="base_url">http://10.0.2.2:8080/_ah/api/storelocator/v1</string>
    <string name="action_user_detial">Profile Details</string>
    <string name="error_parse_json">Error parsing data</string>
    <string name="title_activity_add_new_inventory_item">AddNewInventoryItem</string>
    <string name="title_activity_select_product_catogory">SelectProductCatogory</string>
    <string name="title_activity_select_product_category">SelectProductCategory</string>
    <string name="title_activity_search_product">Search</string>
    <string name="add_product">New Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="action_search_product">Search Product</string>
    <string name="select_account">Select Account</string>
    <string name="sync">Sync</string>
    <string name="syncing_">Syncing...</string>
    <string name="no_app_can_open_this">No app can open this</string>
    <string name="choose_aciton">Choose Action</string>
    <string name="title_activity_search_result">SearchResult</string>
    <string name="button_search">Search</string>
    <string name="hint_search">Search Product</string>
</resources>
