<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".SearchProduct">
    <item android:id="@+id/action_add" android:title="@string/add_product"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_sync" android:title="@string/sync"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_user_detail" android:title="@string/action_user_detial"
        android:orderInCategory="100" app:showAsAction="never"/>
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="100" app:showAsAction="never"/>
</menu>
