<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_search"
        android:title="@string/action_search_product"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_search"></item>
    <item android:id="@+id/action_user_detail"
        android:title="@string/action_user_detial"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_user"></item>
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_action_exit_to_app"></item>
</menu>
